# cppdotenv

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: loadEnv.h  load_env.h
src/: loadEnv.cpp  load_env.cpp
test/: test_loadEnv.cpp  test_load_env.cpp
test/test_files/: .env.local
